feat: 完善 swagger 配置
